...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="CiD-oR-yqB" id="D2M-Uh-3Ra"/>
                            <outlet property="delegate" destination="CiD-oR-yqB" id="jDf-g1-PSf"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="nRF Blinky" id="mCo-A8-H1i">
                        <barButtonItem key="backBarButtonItem" title="Scanner" id="K05-ZQ-Swb"/>
                    </navigationItem>
                    <connections>
                        <outlet property="emptyPeripheralsView" destination="UsK-q4-ZJ2" id="Gd6-ad-7Ky"/>
                        <segue destination="pK8-7d-htc" kind="show" identifier="PushBlinkyView" id="hYw-dI-G21"/>
                    </connections>
                </tableViewController>
...
                                                        <constraint firstAttribute="height" constant="24" id="2Ju-TJ-MHf"/>
                                                        <constraint firstAttribute="width" constant="24" id="tZj-gq-7Hp"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UNKNOWN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sXe-8K-21Q">
                                                    <rect key="frame" x="48.000000000000007" y="18" width="87.666666666666686" height="20.333333333333329"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ledState"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ug3-O5-D3G">
                                                    <rect key="frame" x="266" y="14" width="63" height="28"/>
                                                    <accessibility key="accessibilityConfiguration" hint="Tap to toggle the LED" identifier="ledSwitch" label="LED Switch">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
                                                    <color key="onTintColor" red="0.0" green="0.46666666670000001" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
                                                    <connections>
                                                        <action selector="ledToggleSwitchDidChange:" destination="pK8-7d-htc" eventType="valueChanged" id="LAy-So-9v3"/>
                                                    </connections>
...
                                                        <constraint firstAttribute="height" constant="24" id="c4J-S6-AGl"/>
                                                        <constraint firstAttribute="width" constant="24" id="eFo-h9-BEb"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UNKNOWN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oaQ-Ex-coH">
                                                    <rect key="frame" x="48.000000000000007" y="18" width="87.666666666666686" height="20.333333333333329"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="buttonState"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                            <constraints>
                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="oaQ-Ex-coH" secondAttribute="trailing" constant="20" symbolic="YES" id="7gE-lQ-PrY"/>
...
