...
    // MARK: - UIViewController

    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.isAccessibilityElement = true
        tableView.accessibilityLabel = "Blinky Control"
        tableView.accessibilityIdentifier = "control"
        
        if #available(iOS 13.0, *) {
            connectionIndicator = UIActivityIndicatorView(style: .medium)
        } else {
            connectionIndicator = UIActivityIndicatorView(style: .white)
        }
...
    
    func showErrorMessage(_ message: String) {
        DispatchQueue.main.async {
            let alert = UIAlertController(title: "Error".localized,
                                          message: message,
                                          preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK".localized, style: .cancel))
            self.present(alert, animated: true)
        }
    }
}

private extension BlinkyViewController {
...
