...
    // MARK: - UIViewController

    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.isAccessibilityElement = true
        tableView.accessibilityLabel = "Scan Results"
        tableView.accessibilityIdentifier = "scanResults"
        
        if #available(iOS 26.0, *) {
            activityIndicator = UIActivityIndicatorView(style: .medium)
        } else {
            activityIndicator = UIActivityIndicatorView(style: .white)
        }
...
